--- a/.github/workflows/mulle-sde-ci.yml
+++ b/.github/workflows/mulle-sde-ci.yml
@@ -27,12 +27,12 @@ jobs:
       run:  env | sort
 
     - uses: actions/checkout@v2
-      if: ! env.ACT
+      if: ${{ env.ACT }} != "true"
 
     # for act, create a local docker with ENV HAVE_MULLE_SDE=true
     # and install mulle-sde in the local docker, so you can skip this step
     - uses: mulle-sde/github-ci@v1
-      if: ! env.HAVE_MULLE_SDE
+      if: ${{ env.HAVE_MULLE_SDE }} != "true"
 
     - name: Dump Project Environment
       run:  |
